--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -9,9 +9,6 @@ server {
     #     include snippets/fastcgi-php.conf;
     #     fastcgi_pass php:9000;
     # }
-    location /harenec2/api/api_timetable.php/ {
-        try_files $uri $uri/ /harenec2/api/api_timetable.php?path=$request_uri;
-    }
 
     location ~ \.php$ {
         fastcgi_pass php:9000;
@@ -20,14 +17,24 @@ server {
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 
-    location /harenec4/server/api/api_stats.php/ {
-		try_files $uri $uri/ /harenec4/server/api/api_stats.php?path=$request_uri;
-	}
-	location /harenec4/server/api/api_weather.php/ {
-	  	try_files $uri $uri/ /harenec4/server/api/api_stats.php?path=$request_uri;
-	}
     location ~ "^/([a-zA-Z0-9]{5})$" {
         rewrite ^/(.*)$ /harenecPoll/poll.php?code=$1 permanent;
+    }
+
+    location /harenecPoll/api.php {
+	    add_header 'Access-Control-Allow-Origin' '*';
+	    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        rewrite ^/harenecPoll/api.php/(.*)$ /harenecPoll/api.php?$1 last; 
+    }
+
+    location /wss2 {
+        proxy_pass http://127.0.0.1:8283;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
 }
